welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:13: error: not found: value o
for (nbeff <- o to nbpas)
              ^