welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbpas = 0 
var nbeff = 0
 
while (!estSurBiscuit)
{
	avance; 
	nbpas = nbpas + 1
}

prendBiscuit;

for (nbeff <- o to nbpas)
{
	recule;
	nbeff = nbeff + 1 
}

poseBiscuit; 